<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#00FFFFFF"
    tools:context=".Cart">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#2196F3">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="118dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="118dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/my_cart"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="352dp"
            android:layout_marginBottom="3dp"
            android:background="#00FFFFFF"
            app:icon="@drawable/abc_vector_test"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header">

    </ListView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="270dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="7dp"
            android:background="#2196F3"
            android:insetLeft="0dp"
            android:insetTop="1dp"
            android:insetRight="0dp"
            android:insetBottom="1dp"
            android:text="@string/save_as_default_tax"
            android:textColor="#212121"
            android:textSize="12sp"
            app:backgroundTint="@android:color/holo_orange_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.806"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="88dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="307dp"
            android:layout_marginBottom="57dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/subtotal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="88dp"
            android:layout_height="23dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="283dp"
            android:layout_marginBottom="23dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/total"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/subtotal_price"
            android:layout_width="168dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="94dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="149dp"
            android:layout_marginBottom="52dp"
            android:text="@string/textview"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="180dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="20dp"
            android:text="@string/textview"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tax_amt"
            android:layout_width="62dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="309dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:hint="@string/_13"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/percentage_sign"
            android:layout_width="32dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="369dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="55dp"
            android:text="@string/percentage_sign"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tax"
            android:layout_width="43dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="278dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="55dp"
            android:text="@string/tax"
            android:textSize="16sp" />

    </RelativeLayout>


</RelativeLayout>